[workspace]
#
# Packages and exclusions go here
#

# We need to explicitly specify resolver 2.
# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, however if you
# remove this, `getrandom` will fail trying to find `std` when building `mc-sgx-core-types`.  This is because
# `mc-sgx-core-types` uses `rand` in it's `dev-dependencies`.  `rand` will use the `std` feature of `getrandom`, however
# being in `dev-dependencies` it shouldn't normally get pulled in during a build.
# Even specifying `edition = "2021"` here will not fix this
resolver = "2"
edition = "2021"

[profile.dev]
opt-level = 0
lto = "thin"

[profile.release]
opt-level = 3
rpath = false
lto = "thin"
debug-assertions = false
overflow-checks = false

[workspace.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"

# The file names in this key are relative to the each crate that gets released.
# So we only need one `README.md` entry if all the README's follow a
# common format and are always next to the Cargo.toml for their respective
# package.
pre-release-replacements = [
    {file="README.md", search="mc-[a-z-]+/[0-9.]+", replace="{{crate_name}}/{{version}}"},
]

