[package]
name = "mc-sgx-alloc"
version = "0.1.1-beta.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "Allocator for SGX enclave"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std", "alloc"]

[dependencies]
mc-sgx-tservice-sys = "0.4.0"
