[package]
name = "mc-sgx-io"
version = "0.1.1-beta.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "IO implementation for use inside of SGX enclaves"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std"]

[dependencies]
mc-sgx-core-sys-types = "0.5.0"
mc-sgx-core-types = "0.5.0"
mc-sgx-util = "0.6.0"

[dev-dependencies]
once_cell = "1.16.0"
serial_test = "2.0.0"
yare = "1.0.1"
