[package]
name = "mc-sgx-io"
version = "0.1.1-beta.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["hardware-support", "no-std"]
description = "IO implementation for use inside of SGX enclaves"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx", "no-std"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mc-sgx-core-sys-types = "0.6.0"
mc-sgx-core-types = "0.7.3"
mc-sgx-util = "0.6.0"

[dev-dependencies]
once_cell = "1.16.0"
serial_test = "2.0.0"
yare = "1.0.1"
