[package]
name = "mc-sgx-panic"
version = "0.1.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "Panic handler for SGX enclave"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std", "panic"]

[dependencies]
