[package]
name = "mc-sgx-panic"
version = "0.1.1-beta.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "Panic handler for SGX enclaves"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std", "panic"]

[features]
log = ["dep:mc-sgx-io", "dep:mc-sgx-sync"]

[dependencies]
mc-sgx-io = { path = "../io", version = "=0.1.1-beta.0", optional = true }
mc-sgx-panic-sys = { path = "sys", version = "=0.1.1-beta.0" }
mc-sgx-sync = { path = "../sync", version = "=0.1.1-beta.0", optional = true }
