[package]
name = "mc-sgx-panic"
version = "0.1.1-beta.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["hardware-support", "no-std"]
description = "Panic handler for SGX enclaves"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx", "no-std", "panic"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[features]
log = ["dep:mc-sgx-io", "dep:mc-sgx-sync"]

[dependencies]
mc-sgx-io = { path = "../io", version = "=0.1.1-beta.0", optional = true }
mc-sgx-panic-sys = { path = "sys", version = "=0.1.1-beta.0" }
mc-sgx-sync = { path = "../sync", version = "=0.1.1-beta.0", optional = true }
