[package]
name = "mc-sgx-sync"
version = "0.1.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "Synchronization primitives for SGX enclaves"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std"]

[dependencies]
