[package]
name = "mc-sgx-sync"
version = "0.1.1-beta.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "Synchronization primitives for SGX enclaves"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std"]

[lib]
# test false due to needing an enclave to fully link
test = false
doctest = false

[dependencies]
mc-sgx-panic-sys = { path = "../panic/sys", version = "=0.1.1-beta.0" }
mc-sgx-tstdc = "0.6.0"
