[package]
name = "mc-sgx-sync"
version = "0.1.1-beta.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["hardware-support", "no-std"]
description = "Synchronization primitives for SGX enclaves"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx", "no-std"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
# test false due to needing an enclave to fully link
test = false
doctest = false

[dependencies]
mc-sgx-panic-sys = { path = "../panic/sys", version = "=0.1.1-beta.0" }
mc-sgx-tstdc = "0.5.0"
