[package]
name = "test_enclave"
version = "0.2.0-pre0"
edition = "2021"
license = "Apache-2.0"

# We don't need to publish since this is testing only.  As long as dependent
# crates reference this by path only and not version then cargo publish will
# remove it from the build step.
# In order to work with cargo-release we reference local crates only by path,
# not version.
publish = false

[dependencies]
mc-sgx-core-sys-types = { version = "0.6.0" }
mc-sgx-urts-sys-types = { version = "0.6.0" }

[features]
default = []

[build-dependencies]
bindgen = "0.62.0"
cargo-emit = "0.2.1"
cc = "1.0.73"
mc-sgx-core-build = { version = "0.6.0" }
rand = "0.8.5"
rsa = "0.6.1"
