[package]
name = "mc-sgx-io-untrusted"
version = "0.1.1-beta.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["hardware-support"]
description = "Untrusted or host IO implementation for SGX enclaves"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[features]
sim = ["mc-sgx-urts/sim"]
default = []

[dependencies]
mc-sgx-urts = "0.6.0"
mc-sgx-util = "0.6.0"
once_cell = "1.16.0"

[dev-dependencies]
serial_test = "2.0.0"
test_enclave = { path = "../../test_enclave" }
