[package]
name = "mc-sgx-std-lang-allocator"
version = "0.1.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "Global Allocator Language Item for SGX Enclaves"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std", "alloc"]

[dependencies]
mc-sgx-alloc = { path = "../../alloc", version = "0.1.0" }
