[package]
name = "mc-sgx-panic-abort"
version = "0.1.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "Panic handler for SGX enclaves that aborts"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std", "panic"]

[dependencies]
# To get link in the abort() function
mc-sgx-trts-sys = "0.4.0"

