[package]
name = "mc-sgx-panic-log"
version = "0.1.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-std"
description = "Panic handler for an SGX enclave that logs to the untrusted (host)"
categories = ["hardware-support", "no-std"]
keywords = ["sgx", "no-std", "panic"]

[workspace]

[dependencies]
mc-sgx-io = { path = "../../io", version = "0.1.0" }

# This is a crate that can only be built for an SGX target, so it's not part of
# the root workspace. Because of this limitation we must re-iterate the
# `cargo release` settings here
[package.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"

# The file names in this key are relative to the each crate that gets released.
# So we only need one `README.md` entry if all the README's follow a
# common format and are always next to the Cargo.toml for their respective
# package.
pre-release-replacements = [
    {file="README.md", search="mc-[a-z-]+/[0-9.]+", replace="{{crate_name}}/{{version}}"},
]
