[package]
name = "mc-sgx-panic-sys"
version = "0.1.1-beta.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["hardware-support", "no-std"]
description = "Common panic handling behavior for SGX enclaves"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["sgx", "no-std", "panic"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
